新增B站登录异常时的验证

--- a/timer/app/src/main/res/layout/activity_transcode.xml
+++ b/timer/app/src/main/res/layout/activity_transcode.xml
@@ -31,11 +31,10 @@
 
                 <ImageView
                     android:id="@+id/iv_cover"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:adjustViewBounds="true"
-                    android:scaleType="fitXY"
                     android:background="@drawable/border_primary" />
                 <LinearLayout
                     android:id="@+id/ll_red_line"
