timer 视频画面跟随进度条逐帧显示 bookkeeping 登录异常验证修改，视频获取header修改

--- a/timer/app/src/main/res/layout/activity_transcode.xml
+++ b/timer/app/src/main/res/layout/activity_transcode.xml
@@ -35,6 +35,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:adjustViewBounds="true"
+                    android:visibility="gone"
                     android:background="@drawable/border_primary" />
                 <LinearLayout
                     android:id="@+id/ll_red_line"
