--- a/timer/app/src/main/res/layout/activity_transcode.xml
+++ b/timer/app/src/main/res/layout/activity_transcode.xml
@@ -22,7 +22,18 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
+                    <SurfaceView
+                        android:id="@+id/surfaceview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center">
+                    </SurfaceView>
+
+                </FrameLayout>
                 <ImageView
                     android:id="@+id/iv_cover"
                     android:layout_width="wrap_content"
@@ -47,17 +58,7 @@
 
                 </LinearLayout>
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
 
-                    <SurfaceView
-                        android:id="@+id/surfaceview"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"></SurfaceView>
-
-                </FrameLayout>
                 <LinearLayout
                     android:id="@+id/ll_page"
                     android:layout_width="wrap_content"
