--- a/timer/app/src/main/res/layout/fragment_camera2_video.xml
+++ b/timer/app/src/main/res/layout/fragment_camera2_video.xml
@@ -7,9 +7,7 @@
         android:id="@+id/mTextureView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true" />
-
-    <include layout="@layout/layout_title"/>
+        android:layout_centerInParent="true"/>
 
     <TextView
         android:id="@+id/tv_video_time"
